--- a/local/workers/linux/Vagrantfile
+++ b/local/workers/linux/Vagrantfile
@@ -5,6 +5,8 @@ Vagrant.configure("2") do |config|
   config.vm.box = "elastic/ubuntu-16.04-x86_64"
   config.disksize.size = '50GB'
   config.vm.network "private_network", ip: "192.168.33.12"
+  config.vm.synced_folder "/Users/mp/devel/apm-agent-java", "/apm-agent-java"
+  config.vm.network "forwarded_port", guest: 8080, host: 8080
 
   config.vm.provider "virtualbox" do |vb|
     vb.gui = false
